fixed z-indexing.

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 .main-container {
-    .main-content {
-        position: relative;
-        z-index: 1;
-    }
     .main-navigation {
         left: 0;
         height: 100vh;
